--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         </plugins>
     </build>
 
-    <dependencyManagement>
+       <!-- <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.glassfish.jersey</groupId>
@@ -35,7 +35,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
 
     <dependencies>
         <dependency>
