--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
+                 <version>${jersey.version}</version>
         </dependency>
         
     </dependencies>
